# festo-cpx-io-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  _verify_imports.py  api.py  automation.py  bench_config.json  ci_api_client.py  config_io.py  config_models.py  conftest.py  connection_manager.py  connections.jsonc  crash_log.txt  docker-compose.yml  generate_system_config.py  hal.py  module_metadata.json  outputs.py  pocketbase_logger.py  pocketbase_schema.json  power_supply.py  promt.md  pyproject.toml  repository.py  requirements.txt  resolver.py  safety.py  test.jsonc  test_compatibility.json  test_execution.py  test_runner.py  topology.jsonc  valve_channels.py
data/: bench_config.json
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
pb_migrations/: 1784238000_import_festo_schema.js
tests/: __init__.py  _base.py  compare_topology.py  condition_counter.py  dio_toggle.py  factory_reset.py  open_load_diag.py  output_toggle.py  remanent_params.py  system_diagnosis.py  test_api.py  test_automation.py  test_compare_topology.py  test_condition_counter.py  test_connection_manager.py  test_dio_toggle.py  test_factory_reset.py  test_generated_config_metadata.py  test_manual_io.py  test_module_metadata.py  test_open_load_diag.py  test_output_toggle.py  test_remanent_params.py  test_repository_pocketbase.py  test_resolver_capabilities.py  test_suite.py  test_system_diagnosis.py  test_validate_connections.py  test_valve_condition_counter.py  test_valve_toggle.py  test_valve_toggle_selection.py  validate_connections.py  valve_condition_counter.py  valve_toggle.py
